Stacking Classifier implementation

--- a/HomeWork8/auction_verification.ipynb
+++ b/HomeWork8/auction_verification.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2804,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -37,7 +37,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2805,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
@@ -84,7 +84,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2806,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
@@ -207,7 +207,7 @@
        "4                    1          85.466667  "
       ]
      },
-     "execution_count": 2806,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -227,7 +227,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2807,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
@@ -277,7 +277,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2808,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
@@ -412,7 +412,7 @@
        "4                    1          85.466667  0.702028  85.466667  "
       ]
      },
-     "execution_count": 2808,
+     "execution_count": 25,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -427,7 +427,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2809,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
@@ -477,7 +477,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2810,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -488,7 +488,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2811,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -511,7 +511,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2812,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [
     {
@@ -553,7 +553,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2813,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [
     {
@@ -582,7 +582,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2814,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [
     {
@@ -617,7 +617,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2815,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [
     {
@@ -646,7 +646,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2816,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [
     {
@@ -699,7 +699,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2817,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [
     {
@@ -707,7 +707,7 @@
      "output_type": "stream",
      "text": [
       "[LightGBM] [Info] Number of positive: 207, number of negative: 1427\n",
-      "[LightGBM] [Info] Auto-choosing row-wise multi-threading, the overhead of testing was 0.000355 seconds.\n",
+      "[LightGBM] [Info] Auto-choosing row-wise multi-threading, the overhead of testing was 0.000530 seconds.\n",
       "You can set `force_row_wise=true` to remove the overhead.\n",
       "And if memory is not enough, you can set `force_col_wise=true`.\n",
       "[LightGBM] [Info] Total Bins 637\n",
@@ -766,7 +766,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2818,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [
     {
@@ -774,9 +774,8 @@
      "output_type": "stream",
      "text": [
       "[LightGBM] [Info] Number of positive: 155, number of negative: 1070\n",
-      "[LightGBM] [Info] Auto-choosing row-wise multi-threading, the overhead of testing was 0.000611 seconds.\n",
-      "You can set `force_row_wise=true` to remove the overhead.\n",
-      "And if memory is not enough, you can set `force_col_wise=true`.\n",
+      "[LightGBM] [Info] Auto-choosing col-wise multi-threading, the overhead of testing was 0.001127 seconds.\n",
+      "You can set `force_col_wise=true` to remove the overhead.\n",
       "[LightGBM] [Info] Total Bins 620\n",
       "[LightGBM] [Info] Number of data points in the train set: 1225, number of used features: 10\n",
       "[LightGBM] [Info] [binary:BoostFromScore]: pavg=0.126531 -> initscore=-1.931989\n",
@@ -791,7 +790,7 @@
       "[LightGBM] [Warning] No further splits with positive gain, best gain: -inf\n",
       "[LightGBM] [Warning] No further splits with positive gain, best gain: -inf\n",
       "[LightGBM] [Info] Number of positive: 155, number of negative: 1070\n",
-      "[LightGBM] [Info] Auto-choosing row-wise multi-threading, the overhead of testing was 0.000435 seconds.\n",
+      "[LightGBM] [Info] Auto-choosing row-wise multi-threading, the overhead of testing was 0.000408 seconds.\n",
       "You can set `force_row_wise=true` to remove the overhead.\n",
       "And if memory is not enough, you can set `force_col_wise=true`.\n",
       "[LightGBM] [Info] Total Bins 620\n",
@@ -808,7 +807,7 @@
       "[LightGBM] [Warning] No further splits with positive gain, best gain: -inf\n",
       "[LightGBM] [Warning] No further splits with positive gain, best gain: -inf\n",
       "[LightGBM] [Info] Number of positive: 156, number of negative: 1070\n",
-      "[LightGBM] [Info] Auto-choosing row-wise multi-threading, the overhead of testing was 0.000456 seconds.\n",
+      "[LightGBM] [Info] Auto-choosing row-wise multi-threading, the overhead of testing was 0.000494 seconds.\n",
       "You can set `force_row_wise=true` to remove the overhead.\n",
       "And if memory is not enough, you can set `force_col_wise=true`.\n",
       "[LightGBM] [Info] Total Bins 620\n",
@@ -825,7 +824,7 @@
       "[LightGBM] [Warning] No further splits with positive gain, best gain: -inf\n",
       "[LightGBM] [Warning] No further splits with positive gain, best gain: -inf\n",
       "[LightGBM] [Info] Number of positive: 155, number of negative: 1071\n",
-      "[LightGBM] [Info] Auto-choosing row-wise multi-threading, the overhead of testing was 0.000476 seconds.\n",
+      "[LightGBM] [Info] Auto-choosing row-wise multi-threading, the overhead of testing was 0.000557 seconds.\n",
       "You can set `force_row_wise=true` to remove the overhead.\n",
       "And if memory is not enough, you can set `force_col_wise=true`.\n",
       "[LightGBM] [Info] Total Bins 620\n",
@@ -862,7 +861,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2819,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [
     {
@@ -870,7 +869,7 @@
      "output_type": "stream",
      "text": [
       "[LightGBM] [Info] Number of positive: 207, number of negative: 1427\n",
-      "[LightGBM] [Info] Auto-choosing row-wise multi-threading, the overhead of testing was 0.000523 seconds.\n",
+      "[LightGBM] [Info] Auto-choosing row-wise multi-threading, the overhead of testing was 0.000600 seconds.\n",
       "You can set `force_row_wise=true` to remove the overhead.\n",
       "And if memory is not enough, you can set `force_col_wise=true`.\n",
       "[LightGBM] [Info] Total Bins 637\n",
@@ -907,7 +906,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2820,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [
     {
@@ -960,7 +959,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2821,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [
     {
@@ -968,7 +967,7 @@
      "output_type": "stream",
      "text": [
       "[LightGBM] [Info] Number of positive: 207, number of negative: 1427\n",
-      "[LightGBM] [Info] Auto-choosing row-wise multi-threading, the overhead of testing was 0.000422 seconds.\n",
+      "[LightGBM] [Info] Auto-choosing row-wise multi-threading, the overhead of testing was 0.000387 seconds.\n",
       "You can set `force_row_wise=true` to remove the overhead.\n",
       "And if memory is not enough, you can set `force_col_wise=true`.\n",
       "[LightGBM] [Info] Total Bins 312\n",
@@ -997,9 +996,8 @@
       "[LightGBM] [Warning] No further splits with positive gain, best gain: -inf\n",
       "[LightGBM] [Warning] No further splits with positive gain, best gain: -inf\n",
       "[LightGBM] [Info] Number of positive: 155, number of negative: 1070\n",
-      "[LightGBM] [Info] Auto-choosing row-wise multi-threading, the overhead of testing was 0.000472 seconds.\n",
-      "You can set `force_row_wise=true` to remove the overhead.\n",
-      "And if memory is not enough, you can set `force_col_wise=true`.\n",
+      "[LightGBM] [Info] Auto-choosing col-wise multi-threading, the overhead of testing was 0.000396 seconds.\n",
+      "You can set `force_col_wise=true` to remove the overhead.\n",
       "[LightGBM] [Info] Total Bins 312\n",
       "[LightGBM] [Info] Number of data points in the train set: 1225, number of used features: 8\n",
       "[LightGBM] [Info] [binary:BoostFromScore]: pavg=0.126531 -> initscore=-1.931989\n",
@@ -1023,7 +1021,7 @@
       "[LightGBM] [Warning] No further splits with positive gain, best gain: -inf\n",
       "[LightGBM] [Warning] No further splits with positive gain, best gain: -inf\n",
       "[LightGBM] [Info] Number of positive: 155, number of negative: 1070\n",
-      "[LightGBM] [Info] Auto-choosing row-wise multi-threading, the overhead of testing was 0.000455 seconds.\n",
+      "[LightGBM] [Info] Auto-choosing row-wise multi-threading, the overhead of testing was 0.000456 seconds.\n",
       "You can set `force_row_wise=true` to remove the overhead.\n",
       "And if memory is not enough, you can set `force_col_wise=true`.\n",
       "[LightGBM] [Info] Total Bins 312\n",
@@ -1050,7 +1048,7 @@
       "[LightGBM] [Warning] No further splits with positive gain, best gain: -inf\n",
       "[LightGBM] [Warning] No further splits with positive gain, best gain: -inf\n",
       "[LightGBM] [Info] Number of positive: 156, number of negative: 1070\n",
-      "[LightGBM] [Info] Auto-choosing row-wise multi-threading, the overhead of testing was 0.000537 seconds.\n",
+      "[LightGBM] [Info] Auto-choosing row-wise multi-threading, the overhead of testing was 0.000323 seconds.\n",
       "You can set `force_row_wise=true` to remove the overhead.\n",
       "And if memory is not enough, you can set `force_col_wise=true`.\n",
       "[LightGBM] [Info] Total Bins 312\n",
@@ -1085,7 +1083,7 @@
       "[LightGBM] [Warning] No further splits with positive gain, best gain: -inf\n",
       "[LightGBM] [Warning] No further splits with positive gain, best gain: -inf\n",
       "[LightGBM] [Info] Number of positive: 155, number of negative: 1071\n",
-      "[LightGBM] [Info] Auto-choosing row-wise multi-threading, the overhead of testing was 0.000507 seconds.\n",
+      "[LightGBM] [Info] Auto-choosing row-wise multi-threading, the overhead of testing was 0.000343 seconds.\n",
       "You can set `force_row_wise=true` to remove the overhead.\n",
       "And if memory is not enough, you can set `force_col_wise=true`.\n",
       "[LightGBM] [Info] Total Bins 312\n",
@@ -1117,7 +1115,7 @@
       "[LightGBM] [Warning] No further splits with positive gain, best gain: -inf\n",
       "Cross-Validation Scores: [1.         0.99511002 1.         0.99754902]\n",
       "[LightGBM] [Info] Number of positive: 207, number of negative: 1427\n",
-      "[LightGBM] [Info] Auto-choosing row-wise multi-threading, the overhead of testing was 0.000398 seconds.\n",
+      "[LightGBM] [Info] Auto-choosing row-wise multi-threading, the overhead of testing was 0.000347 seconds.\n",
       "You can set `force_row_wise=true` to remove the overhead.\n",
       "And if memory is not enough, you can set `force_col_wise=true`.\n",
       "[LightGBM] [Info] Total Bins 312\n",
@@ -1177,7 +1175,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2822,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [
     {
@@ -1225,23 +1223,127 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "`"
+    "Stacking Classifier"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 40,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Cross-Validation Scores: [1.         0.99755501 0.99264706 0.99019608]\n"
+     ]
+    }
+   ],
+   "source": [
+    "estimators = [\n",
+    "    ('rf', RandomForestClassifier(n_estimators=100, random_state=42)),\n",
+    "    ('kNN', KNeighborsClassifier(n_neighbors=5)),\n",
+    "    ('dec_tree', DecisionTreeClassifier(max_depth=6, random_state=42)),\n",
+    "]\n",
+    "stack_clf = StackingClassifier(estimators=estimators, final_estimator=LogisticRegression()).fit(X_train,y_train)\n",
+    "cv_sc = cross_val_score(stack_clf, X_train, y_train, cv=4)\n",
+    "print(f\"Cross-Validation Scores: {cv_sc}\")"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "Very good parameters for cross validation of Stacking Classifier model"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 41,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Train Score: 1.0\n",
+      "Test Score: 0.9828850855745721\n"
+     ]
+    }
+   ],
+   "source": [
+    "stack_clf.fit(X_train, y_train)\n",
+    "\n",
+    "print(f'Train Score: {stack_clf.score(X_train, y_train)}')\n",
+    "print(f'Test Score: {stack_clf.score(X_test, y_test)}')"
+   ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "The bechaviour is the same for train and test score"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 42,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Accuracy: 0.98\n",
+      "Classification Report:\n",
+      "              precision    recall  f1-score   support\n",
+      "\n",
+      "           0       0.99      0.99      0.99       354\n",
+      "           1       0.91      0.96      0.94        55\n",
+      "\n",
+      "    accuracy                           0.98       409\n",
+      "   macro avg       0.95      0.97      0.96       409\n",
+      "weighted avg       0.98      0.98      0.98       409\n",
+      "\n",
+      "Confusion Matrix:\n",
+      "[[349   5]\n",
+      " [  2  53]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Predict result\n",
+    "y_pred = stack_clf.predict(X_test)\n",
+    "\n",
+    "# Evaluate the model's performance\n",
+    "accuracy = accuracy_score(y_test, y_pred)\n",
+    "print(f'Accuracy: {accuracy:.2f}')\n",
+    "print('Classification Report:')\n",
+    "print(classification_report(y_test, y_pred))\n",
+    "print('Confusion Matrix:')\n",
+    "print(confusion_matrix(y_test, y_pred))"
+   ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "Not bad precision and recall parameters, but a little bit less than from prevous both."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Conclusion: All models show almost the same result with small difference. In each case, hyperparameters need to be selected to improve the model's prediction. Adding new features does not always help improve the result."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "`"
+   ]
   }
  ],
  "metadata": {
