feat: final version

--- a/HomeWork8/auction_verification.ipynb
+++ b/HomeWork8/auction_verification.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 76,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -37,7 +37,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -64,6 +64,7 @@
     }
    ],
    "source": [
+    "# Load data frame\n",
     "df = pd.read_csv('data.csv')\n",
     "df.info()"
    ]
@@ -84,7 +85,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 78,
    "metadata": {},
    "outputs": [
     {
@@ -207,7 +208,7 @@
        "4                    1          85.466667  "
       ]
      },
-     "execution_count": 23,
+     "execution_count": 78,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -227,7 +228,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 79,
    "metadata": {},
    "outputs": [
     {
@@ -277,7 +278,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 80,
    "metadata": {},
    "outputs": [
     {
@@ -412,7 +413,7 @@
        "4                    1          85.466667  0.702028  85.466667  "
       ]
      },
-     "execution_count": 25,
+     "execution_count": 80,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -427,7 +428,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -442,7 +443,7 @@
     }
    ],
    "source": [
-    "# Build correlation matrix\n",
+    "# Build correlation matrix again with new features\n",
     "corr_matrix = df.corr()\n",
     "\n",
     "# Set plot sixe \n",
@@ -477,7 +478,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 82,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -488,7 +489,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 83,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -511,7 +512,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 84,
    "metadata": {},
    "outputs": [
     {
@@ -548,12 +549,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Ideal balance data set "
+    "Seems there is overfitting"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 85,
    "metadata": {},
    "outputs": [
     {
@@ -582,7 +583,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 86,
    "metadata": {},
    "outputs": [
     {
@@ -617,7 +618,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 87,
    "metadata": {},
    "outputs": [
     {
@@ -646,7 +647,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 88,
    "metadata": {},
    "outputs": [
     {
@@ -699,7 +700,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 89,
    "metadata": {},
    "outputs": [
     {
@@ -707,7 +708,7 @@
      "output_type": "stream",
      "text": [
       "[LightGBM] [Info] Number of positive: 207, number of negative: 1427\n",
-      "[LightGBM] [Info] Auto-choosing row-wise multi-threading, the overhead of testing was 0.000530 seconds.\n",
+      "[LightGBM] [Info] Auto-choosing row-wise multi-threading, the overhead of testing was 0.000380 seconds.\n",
       "You can set `force_row_wise=true` to remove the overhead.\n",
       "And if memory is not enough, you can set `force_col_wise=true`.\n",
       "[LightGBM] [Info] Total Bins 637\n",
@@ -766,7 +767,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -774,8 +775,9 @@
      "output_type": "stream",
      "text": [
       "[LightGBM] [Info] Number of positive: 155, number of negative: 1070\n",
-      "[LightGBM] [Info] Auto-choosing col-wise multi-threading, the overhead of testing was 0.001127 seconds.\n",
-      "You can set `force_col_wise=true` to remove the overhead.\n",
+      "[LightGBM] [Info] Auto-choosing row-wise multi-threading, the overhead of testing was 0.000392 seconds.\n",
+      "You can set `force_row_wise=true` to remove the overhead.\n",
+      "And if memory is not enough, you can set `force_col_wise=true`.\n",
       "[LightGBM] [Info] Total Bins 620\n",
       "[LightGBM] [Info] Number of data points in the train set: 1225, number of used features: 10\n",
       "[LightGBM] [Info] [binary:BoostFromScore]: pavg=0.126531 -> initscore=-1.931989\n",
@@ -790,7 +792,7 @@
       "[LightGBM] [Warning] No further splits with positive gain, best gain: -inf\n",
       "[LightGBM] [Warning] No further splits with positive gain, best gain: -inf\n",
       "[LightGBM] [Info] Number of positive: 155, number of negative: 1070\n",
-      "[LightGBM] [Info] Auto-choosing row-wise multi-threading, the overhead of testing was 0.000408 seconds.\n",
+      "[LightGBM] [Info] Auto-choosing row-wise multi-threading, the overhead of testing was 0.000432 seconds.\n",
       "You can set `force_row_wise=true` to remove the overhead.\n",
       "And if memory is not enough, you can set `force_col_wise=true`.\n",
       "[LightGBM] [Info] Total Bins 620\n",
@@ -807,7 +809,7 @@
       "[LightGBM] [Warning] No further splits with positive gain, best gain: -inf\n",
       "[LightGBM] [Warning] No further splits with positive gain, best gain: -inf\n",
       "[LightGBM] [Info] Number of positive: 156, number of negative: 1070\n",
-      "[LightGBM] [Info] Auto-choosing row-wise multi-threading, the overhead of testing was 0.000494 seconds.\n",
+      "[LightGBM] [Info] Auto-choosing row-wise multi-threading, the overhead of testing was 0.000408 seconds.\n",
       "You can set `force_row_wise=true` to remove the overhead.\n",
       "And if memory is not enough, you can set `force_col_wise=true`.\n",
       "[LightGBM] [Info] Total Bins 620\n",
@@ -824,7 +826,7 @@
       "[LightGBM] [Warning] No further splits with positive gain, best gain: -inf\n",
       "[LightGBM] [Warning] No further splits with positive gain, best gain: -inf\n",
       "[LightGBM] [Info] Number of positive: 155, number of negative: 1071\n",
-      "[LightGBM] [Info] Auto-choosing row-wise multi-threading, the overhead of testing was 0.000557 seconds.\n",
+      "[LightGBM] [Info] Auto-choosing row-wise multi-threading, the overhead of testing was 0.000480 seconds.\n",
       "You can set `force_row_wise=true` to remove the overhead.\n",
       "And if memory is not enough, you can set `force_col_wise=true`.\n",
       "[LightGBM] [Info] Total Bins 620\n",
@@ -846,11 +848,10 @@
    ],
    "source": [
     "# Create LGBMClassifier \n",
-    "lgbm_clf = LGBMClassifier(\n",
-    "    # num_leaves=25,      \n",
+    "lgbm_clf = LGBMClassifier(  \n",
     "    max_depth=2,       \n",
     "    learning_rate=0.01, \n",
-    "    n_estimators=9,    # Number of boosting iterations decreas from 20 to 10\n",
+    "    n_estimators=9,   \n",
     "    random_state=42      \n",
     ")\n",
     "\n",
@@ -861,7 +862,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 91,
    "metadata": {},
    "outputs": [
     {
@@ -869,7 +870,7 @@
      "output_type": "stream",
      "text": [
       "[LightGBM] [Info] Number of positive: 207, number of negative: 1427\n",
-      "[LightGBM] [Info] Auto-choosing row-wise multi-threading, the overhead of testing was 0.000600 seconds.\n",
+      "[LightGBM] [Info] Auto-choosing row-wise multi-threading, the overhead of testing was 0.000438 seconds.\n",
       "You can set `force_row_wise=true` to remove the overhead.\n",
       "And if memory is not enough, you can set `force_col_wise=true`.\n",
       "[LightGBM] [Info] Total Bins 637\n",
@@ -901,12 +902,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The minimum number of estimator is 10 which give us normal model and not overfitting. Other hyperparameters are not leverage to the result. "
+    "The minimum number of estimator is 9 which give us normal model and not overfitting. Other hyperparameters are not leverage to the result. "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 92,
    "metadata": {},
    "outputs": [
     {
@@ -959,7 +960,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 93,
    "metadata": {},
    "outputs": [
     {
@@ -967,7 +968,7 @@
      "output_type": "stream",
      "text": [
       "[LightGBM] [Info] Number of positive: 207, number of negative: 1427\n",
-      "[LightGBM] [Info] Auto-choosing row-wise multi-threading, the overhead of testing was 0.000387 seconds.\n",
+      "[LightGBM] [Info] Auto-choosing row-wise multi-threading, the overhead of testing was 0.000374 seconds.\n",
       "You can set `force_row_wise=true` to remove the overhead.\n",
       "And if memory is not enough, you can set `force_col_wise=true`.\n",
       "[LightGBM] [Info] Total Bins 312\n",
@@ -996,8 +997,9 @@
       "[LightGBM] [Warning] No further splits with positive gain, best gain: -inf\n",
       "[LightGBM] [Warning] No further splits with positive gain, best gain: -inf\n",
       "[LightGBM] [Info] Number of positive: 155, number of negative: 1070\n",
-      "[LightGBM] [Info] Auto-choosing col-wise multi-threading, the overhead of testing was 0.000396 seconds.\n",
-      "You can set `force_col_wise=true` to remove the overhead.\n",
+      "[LightGBM] [Info] Auto-choosing row-wise multi-threading, the overhead of testing was 0.000488 seconds.\n",
+      "You can set `force_row_wise=true` to remove the overhead.\n",
+      "And if memory is not enough, you can set `force_col_wise=true`.\n",
       "[LightGBM] [Info] Total Bins 312\n",
       "[LightGBM] [Info] Number of data points in the train set: 1225, number of used features: 8\n",
       "[LightGBM] [Info] [binary:BoostFromScore]: pavg=0.126531 -> initscore=-1.931989\n",
@@ -1021,7 +1023,7 @@
       "[LightGBM] [Warning] No further splits with positive gain, best gain: -inf\n",
       "[LightGBM] [Warning] No further splits with positive gain, best gain: -inf\n",
       "[LightGBM] [Info] Number of positive: 155, number of negative: 1070\n",
-      "[LightGBM] [Info] Auto-choosing row-wise multi-threading, the overhead of testing was 0.000456 seconds.\n",
+      "[LightGBM] [Info] Auto-choosing row-wise multi-threading, the overhead of testing was 0.000482 seconds.\n",
       "You can set `force_row_wise=true` to remove the overhead.\n",
       "And if memory is not enough, you can set `force_col_wise=true`.\n",
       "[LightGBM] [Info] Total Bins 312\n",
@@ -1048,7 +1050,7 @@
       "[LightGBM] [Warning] No further splits with positive gain, best gain: -inf\n",
       "[LightGBM] [Warning] No further splits with positive gain, best gain: -inf\n",
       "[LightGBM] [Info] Number of positive: 156, number of negative: 1070\n",
-      "[LightGBM] [Info] Auto-choosing row-wise multi-threading, the overhead of testing was 0.000323 seconds.\n",
+      "[LightGBM] [Info] Auto-choosing row-wise multi-threading, the overhead of testing was 0.000476 seconds.\n",
       "You can set `force_row_wise=true` to remove the overhead.\n",
       "And if memory is not enough, you can set `force_col_wise=true`.\n",
       "[LightGBM] [Info] Total Bins 312\n",
@@ -1083,7 +1085,7 @@
       "[LightGBM] [Warning] No further splits with positive gain, best gain: -inf\n",
       "[LightGBM] [Warning] No further splits with positive gain, best gain: -inf\n",
       "[LightGBM] [Info] Number of positive: 155, number of negative: 1071\n",
-      "[LightGBM] [Info] Auto-choosing row-wise multi-threading, the overhead of testing was 0.000343 seconds.\n",
+      "[LightGBM] [Info] Auto-choosing row-wise multi-threading, the overhead of testing was 0.000397 seconds.\n",
       "You can set `force_row_wise=true` to remove the overhead.\n",
       "And if memory is not enough, you can set `force_col_wise=true`.\n",
       "[LightGBM] [Info] Total Bins 312\n",
@@ -1115,7 +1117,7 @@
       "[LightGBM] [Warning] No further splits with positive gain, best gain: -inf\n",
       "Cross-Validation Scores: [1.         0.99511002 1.         0.99754902]\n",
       "[LightGBM] [Info] Number of positive: 207, number of negative: 1427\n",
-      "[LightGBM] [Info] Auto-choosing row-wise multi-threading, the overhead of testing was 0.000347 seconds.\n",
+      "[LightGBM] [Info] Auto-choosing row-wise multi-threading, the overhead of testing was 0.000395 seconds.\n",
       "You can set `force_row_wise=true` to remove the overhead.\n",
       "And if memory is not enough, you can set `force_col_wise=true`.\n",
       "[LightGBM] [Info] Total Bins 312\n",
@@ -1175,7 +1177,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 94,
    "metadata": {},
    "outputs": [
     {
@@ -1216,7 +1218,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Removing our new features and model with default hyperpamameters give us valid result and help us to receive acceptable precision and recall for our model."
+    "Removing our new features and model with default hyperpamameters give us valid result and help us to receive acceptable precision and recall for our model. I've tried the GridSearchCV calculed for us best hyperparameters, but when apply them model was overfitting, that's why I decided leave model with default parameters."
    ]
   },
   {
@@ -1228,7 +1230,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -1240,12 +1242,17 @@
     }
    ],
    "source": [
+    "# Set estimators for Stacking Classifier\n",
     "estimators = [\n",
     "    ('rf', RandomForestClassifier(n_estimators=100, random_state=42)),\n",
     "    ('kNN', KNeighborsClassifier(n_neighbors=5)),\n",
     "    ('dec_tree', DecisionTreeClassifier(max_depth=6, random_state=42)),\n",
     "]\n",
+    "\n",
+    "# Create model\n",
     "stack_clf = StackingClassifier(estimators=estimators, final_estimator=LogisticRegression()).fit(X_train,y_train)\n",
+    "\n",
+    "# Cross validation our model\n",
     "cv_sc = cross_val_score(stack_clf, X_train, y_train, cv=4)\n",
     "print(f\"Cross-Validation Scores: {cv_sc}\")"
    ]
@@ -1259,7 +1266,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -1272,6 +1279,7 @@
     }
    ],
    "source": [
+    "# Train model\n",
     "stack_clf.fit(X_train, y_train)\n",
     "\n",
     "print(f'Train Score: {stack_clf.score(X_train, y_train)}')\n",
@@ -1287,7 +1295,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 97,
    "metadata": {},
    "outputs": [
     {
@@ -1335,7 +1343,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Conclusion: All models show almost the same result with small difference. In each case, hyperparameters need to be selected to improve the model's prediction. Adding new features does not always help improve the result."
+    "Conclusion: All models show almost the same result with small difference. In each case hyperparameters need to be selected to improve the model's prediction. Adding new features does not always help improve the result in my case. Since the data frame is not large, training and testing are quite fast, we need to try to pass the test for all models with a higher load and evaluate the speed and performance for each model."
    ]
   },
   {
